// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackStats renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-10 -75 230 130"
      x="0"
      y="0"
    >
      
      
      <g
        class="tile straight-tile"
        transform=""
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="0"
          y="-65"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-65"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-10"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="17.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-65"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-10"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="17.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="45"
        y="-10"
      >
        1
      </text>
      
      <g
        class="tile curved-tile"
        transform=""
      >
        <path
          class="ground"
          d="M 120 -60 A 10 10 0 0 1 110 -50 L 110 40 A 100 100 0 0 0 210 -60 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M 120 -60 A 10 10 0 0 1 117.07106781186548 -52.928932188134524 L 120.60660171779821 -49.39339828220179 A 15 15 0 0 0 125 -60 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 117.07106781186548 -52.928932188134524 A 10 10 0 0 1 110 -50 L 110 -45 A 15 15 0 0 0 120.60660171779821 -49.39339828220179 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M 205 -60 A 95 95 0 0 1 197.76855558857224 -23.645073925316474 L 202.3879532511287 -21.731656763491024 A 100 100 0 0 0 210 -60 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 197.76855558857224 -23.645073925316474 A 95 95 0 0 1 177.17514421272202 7.175144212722003 L 180.71067811865476 10.71067811865474 A 100 100 0 0 0 202.3879532511287 -21.731656763491024 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 177.17514421272202 7.175144212722003 A 95 95 0 0 1 146.35492607468353 27.76855558857224 L 148.268343236509 32.38795325112868 A 100 100 0 0 0 180.71067811865476 10.71067811865474 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 146.35492607468353 27.76855558857224 A 95 95 0 0 1 110 35 L 110 40 A 100 100 0 0 0 148.268343236509 32.38795325112868 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="160"
        y="-10"
      >
        1
      </text>
      
    </svg>
    
  </div>
</body>
`;

exports[`TrackStats renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-10 -75 230 130"
      width="400"
      x="100"
      y="200"
    >
      
      
      <g
        class="tile straight-tile"
        transform=""
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="0"
          y="-65"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-65"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-10"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="17.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-65"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-10"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="17.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="45"
        y="-10"
      >
        1
      </text>
      
      <g
        class="tile curved-tile"
        transform=""
      >
        <path
          class="ground"
          d="M 120 -60 A 10 10 0 0 1 110 -50 L 110 40 A 100 100 0 0 0 210 -60 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M 120 -60 A 10 10 0 0 1 117.07106781186548 -52.928932188134524 L 120.60660171779821 -49.39339828220179 A 15 15 0 0 0 125 -60 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 117.07106781186548 -52.928932188134524 A 10 10 0 0 1 110 -50 L 110 -45 A 15 15 0 0 0 120.60660171779821 -49.39339828220179 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M 205 -60 A 95 95 0 0 1 197.76855558857224 -23.645073925316474 L 202.3879532511287 -21.731656763491024 A 100 100 0 0 0 210 -60 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 197.76855558857224 -23.645073925316474 A 95 95 0 0 1 177.17514421272202 7.175144212722003 L 180.71067811865476 10.71067811865474 A 100 100 0 0 0 202.3879532511287 -21.731656763491024 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 177.17514421272202 7.175144212722003 A 95 95 0 0 1 146.35492607468353 27.76855558857224 L 148.268343236509 32.38795325112868 A 100 100 0 0 0 180.71067811865476 10.71067811865474 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 146.35492607468353 27.76855558857224 A 95 95 0 0 1 110 35 L 110 40 A 100 100 0 0 0 148.268343236509 32.38795325112868 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="160"
        y="-10"
      >
        1
      </text>
      
    </svg>
    
  </div>
</body>
`;

exports[`TrackStats updates when the model is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-10 -75 350 130"
      width="400"
      x="100"
      y="200"
    >
      
      
      <g
        class="tile straight-tile"
        transform=""
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="0"
          y="-65"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-65"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="0"
            y="-10"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="0"
            y="17.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-65"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="-37.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="85"
            y="-10"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="85"
            y="17.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="45"
        y="-10"
      >
        2
      </text>
      
      <g
        class="tile curved-tile-enlarged"
        transform=""
      >
        <path
          class="ground"
          d="M 120 -60 A 10 10 0 0 1 110 -50 L 110 40 L 165 40 A 45 45 0 0 0 210 -5 L 210 -60 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M 120 -60 A 10 10 0 0 1 117.07106781186548 -52.928932188134524 L 120.60660171779821 -49.39339828220179 A 15 15 0 0 0 125 -60 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 117.07106781186548 -52.928932188134524 A 10 10 0 0 1 110 -50 L 110 -45 A 15 15 0 0 0 120.60660171779821 -49.39339828220179 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M 205 -5 A 40 40 0 0 1 193.2842712474619 23.2842712474619 L 196.81980515339464 26.819805153394636 A 45 45 0 0 0 210 -5 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 193.2842712474619 23.2842712474619 A 40 40 0 0 1 165 35 L 165 40 A 45 45 0 0 0 196.81980515339464 26.819805153394636 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="110"
            y="35"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="137.5"
            y="35"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="205"
            y="-60"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="205"
            y="-32.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="160"
        y="-10"
      >
        1
      </text>
      
      <g
        class="tile curved-tile"
        transform=""
      >
        <path
          class="ground"
          d="M 240 -60 A 10 10 0 0 1 230 -50 L 230 40 A 100 100 0 0 0 330 -60 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M 240 -60 A 10 10 0 0 1 237.07106781186548 -52.928932188134524 L 240.6066017177982 -49.39339828220179 A 15 15 0 0 0 245 -60 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 237.07106781186548 -52.928932188134524 A 10 10 0 0 1 230 -50 L 230 -45 A 15 15 0 0 0 240.6066017177982 -49.39339828220179 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M 325 -60 A 95 95 0 0 1 317.7685555885722 -23.645073925316474 L 322.3879532511287 -21.731656763491024 A 100 100 0 0 0 330 -60 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 317.7685555885722 -23.645073925316474 A 95 95 0 0 1 297.175144212722 7.175144212722003 L 300.71067811865476 10.71067811865474 A 100 100 0 0 0 322.3879532511287 -21.731656763491024 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M 297.175144212722 7.175144212722003 A 95 95 0 0 1 266.35492607468353 27.76855558857224 L 268.268343236509 32.38795325112868 A 100 100 0 0 0 300.71067811865476 10.71067811865474 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M 266.35492607468353 27.76855558857224 A 95 95 0 0 1 230 35 L 230 40 A 100 100 0 0 0 268.268343236509 32.38795325112868 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="280"
        y="-10"
      >
        1
      </text>
      
    </svg>
    
  </div>
</body>
`;
